src/service/http/middleware/snapshots/roadster__service__http__middleware__cors__tests__deserialize_cors_allow_methods@case_03.snap
---
source: src/service/http/middleware/cors.rs
expression: value
---
[inner]
type = 'exact'
method = 'foo'
