src/service/http/middleware/snapshots/roadster__service__http__middleware__cors__tests__deserialize_cors_allow_origins@case_04.snap
---
source: src/service/http/middleware/cors.rs
expression: value
---
[inner]
type = 'list'
origins = [
    'foo',
    'bar',
]
