src/service/http/middleware/snapshots/roadster__service__http__middleware__cors__tests__deserialize_cors_expose_headers@case_2.snap
---
source: src/service/http/middleware/cors.rs
expression: value
---
[inner]
type = 'list'
headers = [
    'foo',
    'bar',
]
